authentication alignment fixed

--- a/src/components/Authentication/authentication.css
+++ b/src/components/Authentication/authentication.css
@@ -1,9 +1,26 @@
 .loginCard {
   min-width: 35vw;
 }
+.main-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  top: 45%;
+  left: 50%;
+  transform: translate(50%, 50%);
+}
 
-@media(max-width:768px){
-    .loginCard{
-        min-width: 45vw;
-    }
+@media (max-width: 768px) {
+  .loginCard {
+    min-width: 45vw;
+  }
+}
+
+@media (max-width: 500px) {
+  .main-content {
+    /* position: fixed !important;
+    top: 15% !important;
+    left: 50% !important; */
+  }
 }
